# netspeed

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: Cargo.toml  README.md  download  history.rs  iperf.rs  main.rs  measure.rs  scan.rs  ui.rs  wifi.rs
