[package]
name = "netspeed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netspeed"
path = "src/main.rs"

[dependencies]
eframe    = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui      = "0.27"
egui_plot = "0.27"
reqwest   = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rand      = "0.8"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
